<resources>
    <string name="app_name">ExpenseXpert</string>
    <string name="txtAddExpense">Add Expense</string>
    <string name="txtExpenseHistory">Expense History</string>
    <string name="txtExpenseTitle">Expense title</string>
    <string name="txtExpenseDescription">Description</string>
    <string name="txtExpenseAmount">Amount (Before Tax)</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtProfile">Profile</string>
    <string name="txtAmountAfterTax">Total Amount Including Taxes</string>
    <string name="txtSavingsCal">Savings Calculation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_in_hand_salary">In-hand Salary (e.g. 50000)</string>
    <string name="txt_savings_percentage">Savings Percentage (e.g. 20)</string>
    <string name="txt_calculate">Calculate</string>
    <string name="txt_biweekly">Bi-Weekly</string>
    <string name="txt_monthly">Monthly</string>
</resources>