<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/etInHandSalary"
        app:layout_constraintEnd_toStartOf="@+id/txtMonthlySavings"
        app:layout_constraintStart_toStartOf="@+id/txtMonthlySavings"
        app:layout_constraintTop_toBottomOf="@+id/etInHandSalary">

        <EditText
            android:id="@+id/etInHandSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_in_hand_salary"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/etSavingsPercentage"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSavingsPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_savings_percentage"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
            app:layout_constraintEnd_toEndOf="@+id/etInHandSalary"
            app:layout_constraintStart_toStartOf="@+id/etInHandSalary"
            app:layout_constraintTop_toBottomOf="@+id/etInHandSalary" />


        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
            app:layout_constraintEnd_toEndOf="@+id/etSavingsPercentage"
            app:layout_constraintStart_toStartOf="@+id/etSavingsPercentage"
            app:layout_constraintTop_toBottomOf="@+id/etSavingsPercentage">

            <RadioButton
                android:id="@+id/rbBiWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/txt_biweekly" />

            <RadioButton
                android:id="@+id/rbMonthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/txt_monthly" />
        </RadioGroup>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_calculate"
            app:layout_constraintBottom_toTopOf="@+id/txtMonthlySavings"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
            app:layout_constraintStart_toStartOf="@+id/radioGroup2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <TextView
            android:id="@+id/txtMonthlySavings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txtAnnualSavings"
            app:layout_constraintEnd_toEndOf="@+id/btnCalculate"
            app:layout_constraintStart_toStartOf="@+id/btnCalculate"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

        <TextView
            android:id="@+id/txtAnnualSavings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtMonthlySavings"
            app:layout_constraintStart_toStartOf="@+id/txtMonthlySavings"
            app:layout_constraintTop_toBottomOf="@+id/txtMonthlySavings" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
